--- a/Modulo 3/desafio02/estilo.style.css
+++ b/Modulo 3/desafio02/estilo.style.css
@@ -1,25 +1,40 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2? família=Lagosta+Dois:wght@700&display=swap');
+
+@import url('https://fonts.googleapis.com/css2? família=Taviraj:ital,wght@1,200&display=swap');
+
+:root {
+    --fonte1: 'Lagosta Dois', 'cursiva';
+    --fonte2: 'Taviraj', 'serifa';
+    --fonte3: Verdana, 'Geneva', Tahoma, sans-serif;
+}
+
 *{
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
 }
 
 html,body {
     min-height: 100vh;
     background-color: black;
+    font-family: var(--fonte2);
 }
 
 header {
     background-color: black;
     color: white;
-    text-emphasis: center;
+    text-align: center;
+    font-size: 4em;
 }
 
 head > h1 {
     padding-top: 50px;
     /*text-transform: uppercase; Deixar letra grande.*/
     font-variant: small-caps;
+    font-family: var(--fonte3);
+    font-size: 10vw;
 }
 
 header > p{
@@ -41,6 +56,9 @@ section{
     padding-top: 10vh;
     padding-bottom: 10vh;
     line-height: 2em;
+    padding-left: 30px;
+    font-family: var(--fonte2);
+    font-size: 3.5vw;
 }
 
 section.normal{
@@ -49,12 +67,13 @@ section.normal{
 }
 
 section.imagem{
-    background-color: rgba(168, 168, 168, 0.034);
+    background-color: rgba(51, 51, 51);
     color: white;
 }
 
 section.imagem > p {
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
     background-color: rgba(0, 0, 0, 0.253);
 }
 footer{
