--- a/Modulo 3/desafio02/estilo.style.css
+++ b/Modulo 3/desafio02/estilo.style.css
@@ -26,10 +26,10 @@ header {
     background-color: black;
     color: white;
     text-align: center;
-    font-size: 4em;
+    font-size: 2em;
 }
 
-head > h1 {
+header > h1 {
     padding-top: 50px;
     /*text-transform: uppercase; Deixar letra grande.*/
     font-variant: small-caps;
@@ -57,7 +57,7 @@ section{
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
-    font-family: var(--fonte2);
+    font-family: var(--fonte1);
     font-size: 3.5vw;
 }
 
@@ -69,13 +69,29 @@ section.normal{
 section.imagem{
     background-color: rgba(51, 51, 51);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(48, 48, 48, 0.418);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
     display: inline-block;
     padding: 5px;
     background-color: rgba(0, 0, 0, 0.253);
+    text-shadow: 1px 1px 0px black;
 }
+
+section#img01 {
+    background-image: url(imagens/background001.jpg);
+    background-position: right center;
+    background-size: cover;
+}
+
+section#img02{
+    background-image: url(imagens/background002.jpg);
+    background-size: cover;
+}
+
 footer{
     background-color: black;
     color: white;
