atualizações de exercicios

--- a/Modulo 4/exer26/mq03/estilos/style.css
+++ b/Modulo 4/exer26/mq03/estilos/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-/*Configuração Geral*/
+/*Configuração Geral
 
 *{
     margin: 0px;
@@ -18,4 +18,4 @@ h1{
     color: white;
     text-shadow:  3px 3px 0px rgba(61, 61, 209, 0.603);
     padding: 10px;
-}
+}*/
